syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "SpriteAttachProtos";


enum eSpriteAttachRequestType{
	SpriteAttach = 1;
	UnlockSpriteAttach = 2;
}

enum eSpriteAttachResultType{
	Fail = 0;
	Success = 1;
	UnlockRepeat = 2;
}

message spriteAttachMaterial{
	required int32 itemModelId = 1;
	required int32 count = 2;
}

message SpriteAttachRequest {
	required eSpriteAttachRequestType requestType = 1;
	required int32 heroModelId = 2;
	required int32 spriteAttachId = 3;
    repeated spriteAttachMaterial materials = 4;
}

message SpriteAttachResponse {
	optional eSpriteAttachRequestType requestType = 1;
	optional eSpriteAttachResultType reslutType = 2;
	optional string reslutValue = 3;
}